tests/machine/x/go/cast_struct.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cast_struct.go:14:11: undefined: Todo1

1: //go:build ignore
